# h3-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: algos.rs  bounding_box.rs  constants.rs  consts.rs  coordijk.rs  error.rs  faceijk.rs  index.rs  latlng.rs  lib.rs  math.rs  result.rs  vec2d.rs  vec3d.rs
src/base_cell/: constants.rs  consts.rs  mod.rs
src/coordinate/: mod.rs
src/direction/: mod.rs
src/face/: consts.rs  mod.rs
src/faceijk/: constants.rs  mod.rs
src/index/: consts.rs  mod.rs
src/latlng/: mod.rs
